--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -262,7 +262,7 @@ header {
 
 .main-nav li a:hover, 
 .main-nav li a:active {
-    border-bottom: 2px solid #555;
+    border-bottom: 2px solid #3c52a5;
 }
 
 /* Mobile navigation */
